replace IAM user credentials with IAM role arn

--- a/templates/tower-project.j2
+++ b/templates/tower-project.j2
@@ -288,6 +288,7 @@ Resources:
             - !GetAtt TowerForgeBatchHeadJobRole.Arn
             - !GetAtt TowerForgeBatchWorkJobRole.Arn
             - !GetAtt TowerForgeServiceRole.Arn
+            - !GetAtt TowerRole.Arn
             - !Join
               - ","
               - !Ref AccountAdminArns
@@ -374,6 +375,7 @@ Resources:
                 - !GetAtt TowerForgeServiceRole.Arn
                 - !GetAtt TowerForgeBatchHeadJobRole.Arn
                 - !GetAtt TowerForgeBatchWorkJobRole.Arn
+                - !GetAtt TowerRole.Arn
             Action:
               - "s3:GetBucketLocation"
               - "s3:ListBucket"
@@ -511,6 +513,7 @@ Resources:
                 - !GetAtt TowerForgeServiceRole.Arn
                 - !GetAtt TowerForgeBatchHeadJobRole.Arn
                 - !GetAtt TowerForgeBatchWorkJobRole.Arn
+                - !GetAtt TowerRole.Arn
             Action:
               - "s3:GetBucketLocation"
               - "s3:ListBucket"
