--- a/templates/tower-project.j2
+++ b/templates/tower-project.j2
@@ -340,9 +340,8 @@ Resources:
             - Id: SynapseCORSRule
               AllowedHeaders: ["*"]
               AllowedOrigins: ["*"]
-              AllowedMethods: ["GET", "POST", "PUT", "HEAD", "DELETE"]
+              AllowedMethods: [GET, POST, PUT, HEAD]
               MaxAge: 3000
-              ExposeHeaders: ["ETag"]
             - Id: NullCorsRule
               AllowedHeaders: [""]
               AllowedOrigins: [""]
