[IT-3970] Configure CORS for Data Explorer (#406)
second attempt at commit 381f6722 which had typo in it.
"ExposeHeaders" should be "ExposedHeaders"

--- a/templates/tower-project.j2
+++ b/templates/tower-project.j2
@@ -340,8 +340,9 @@ Resources:
             - Id: SynapseCORSRule
               AllowedHeaders: ["*"]
               AllowedOrigins: ["*"]
-              AllowedMethods: [GET, POST, PUT, HEAD]
+              AllowedMethods: ["GET", "POST", "PUT", "HEAD", "DELETE"]
               MaxAge: 3000
+              ExposedHeaders: ["ETag"]
             - Id: NullCorsRule
               AllowedHeaders: [""]
               AllowedOrigins: [""]
